--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "SimpleOT"]
 	path = SimpleOT
 	url = https://github.com/mkskeller/SimpleOT
-# [submodule "mpir"]
-# 	path = mpir
-# 	url = https://github.com/wbhart/mpir
+[submodule "mpir"]
+	path = mpir
+	url = https://github.com/wbhart/mpir
 [submodule "Programs/Circuits"]
 	path = Programs/Circuits
 	url = https://github.com/mkskeller/bristol-fashion
